# turbo-django

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  documentation.md  pyproject.toml  requirements.txt  run_git_checks.sh  setup.cfg
.github/workflows/: chat.yml  main.yml
doc/: automake.sh  requirements.txt
doc/source/: broadcasts.rst  conf.py  docutils.conf  index.rst  installation.rst  main.rst
doc/source/_static/css/: custom.css
doc/source/topics/: components.rst  model_integration.rst  model_stream.rst  quickstart.rst  streams.rst  templates.rst  turbo.rst
doc/source/tutorial/: index.rst  part_1.rst  part_2.rst  part_3.rst  part_4.rst  part_5.rst
experiments/chat/: LICENSE  Pipfile  README.md  data.json  manage.py  requirements.txt
experiments/chat/DjangoHotwireDemo/: asgi.py  settings.py  urls.py  wsgi.py
experiments/chat/chat/: admin.py  broadcasts.py  channels.py  forms.py  models.py  streams.py  urls.py  views.py
experiments/chat/chat/migrations/: 0001_initial.py
experiments/chat/chat/templates/: base.html  broadcast_example.html
experiments/chat/chat/templates/chat/: broadcast.html  message.html  message_form.html  message_form_frame.html  message_update.html  message_with_room.html  room.html  room_detail.html  room_form.html  room_list.html  wiretap.html
experiments/chat/chat/templates/chat/components/: create_message.html  create_room_form.html  message.html  room_list_item.html  send_message_form.html
experiments/chat/test/: test_basic.py
experiments/chat/turbotutorial/: asgi.py  settings.py  urls.py
experiments/components_demo/: manage.py
experiments/components_demo/app/: apps.py  streams.py  views.py
experiments/components_demo/app/templates/: base.html
experiments/components_demo/app/templates/app/: home.html
experiments/components_demo/app/templates/app/components/: cart_count_component.html  sample_broadcast_component.html
experiments/components_demo/components_demo/: asgi.py  settings.py  urls.py  wsgi.py
experiments/components_demo/test/: context.py
experiments/quickstart/: LICENSE  README.md
experiments/quickstart/quickstart/: apps.py  streams.py
experiments/quickstart/quickstart/templates/: broadcast_example.html
experiments/quickstart/turbotutorial/: settings.py  urls.py
experiments/reminders/: README.md
experiments/reminders/reminders/: apps.py  forms.py  models.py  views.py
experiments/reminders/reminders/templates/reminders/: reminder_list.html  reminder_list_form.html  reminder_list_item.html  reminder_list_items.html
experiments/reminders/turbotutorial/: settings.py  urls.py
tests/: test_basic.py  test_registry.py  test_settings.py  test_stream.py
tests/test_app/app/: urls.py  wsgi.py
tests/test_app/quickstart/: models.py  streams.py
tests/test_app/quickstart/migrations/: 0001_initial.py
turbo/: __init__.py  apps.py  classes.py  components.py  consumers.py  decorators.py  metaclass.py  mixins.py  module_loading.py  registry.py  shortcuts.py  signals.py  utils.py
turbo/response/: __init__.py  middleware.py  mixins.py  renderers.py  response.py  shortcuts.py  template.py  views.py
turbo/response/tests/: settings.py  test_middleware.py  test_renderers.py  test_response.py  test_shortcuts.py  test_template.py  test_views.py
turbo/response/tests/templates/: _my_form.html  base.html  my_form.html  simple.html
turbo/response/tests/templates/testapp/: _todoitem_form.html
turbo/response/tests/testapp/: apps.py  forms.py  models.py
turbo/static/turbo/js/: reconnecting-websocket.min.js  turbo-django.js  turbo.min.js
turbo/templates/turbo/: head.html  stream.html  turbo_stream_id.html  turbo_stream_source.html
turbo/templates/turbo/components/: broadcast_component.html
turbo/templatetags/: turbo_streams.py
turbo/tests/: test_channels.py  test_settings.py  test_stream.py
