[tool.poetry]
name = "turbo"
authors = [
    "Nikita Marchant <C4ptainCrunch@github>",
    "Davis Haupt <davish@github>",
    "Bo Lopker <blopker@github>",
    "Julian Feinauer <JulianFeinauer@github>",
    "Edgard Pineda <epineda@github>",
    "Stephen Mitchell <scuml@github>"
]
version = "0.2.0"
description = "Integrate Hotwire Turbo with Django allowing for a Python-driven dynamic web experience."

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
sphinx-autoapi = "^1.8.1"
alabaster-hotwire = {git = "https://github.com/hotwire-django/sphinx-hotwire-theme.git", rev = "1.0"}
sphinxcontrib-fulltoc = "^1.2.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
