[tool.poetry]
name = "turbo-django"
version = "0.3.0"
description = "Integrate Hotwire Turbo with Django allowing for a Python-driven dynamic web experience."
authors = [
    "Nikita Marchant <C4ptainCrunch@github-username.x>",
    "Davis Haupt <davish@github-username.x>",
    "Bo Lopker <blopker@github-username.x>",
    "Julian Feinauer <JulianFeinauer@github-username.x>",
    "Edgard Pineda <epineda@github-username.x>",
    "Stephen Mitchell <scuml@github-username.x>"
]
readme = "README.md"
license = "MIT"
packages = [
    { include = "turbo" }
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=3.0.0"
channels = ">=2.0.0"


[tool.poetry.dev-dependencies]
sphinx-autoapi = "^1.8.1"
alabaster-hotwire = {git = "https://github.com/hotwire-django/sphinx-hotwire-theme.git", rev = "1.0"}
sphinxcontrib-fulltoc = "^1.2.0"
bump2version = "^1.0.1"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest = "^6.2.5"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100
max-complexity = 10
exclude = 'doc,migrations'

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = 'doc|migrations'


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'turbo.tests.test_settings'
