[bumpversion]
current_version = 0.2.1

[metadata]
name = turbo-django
version = 0.2.0
description = Integrate Hotwire Turbo in your Django app.
long_description = file: README.md
url = https://github.com/hotwire-django/turbo-django
author = Hotwire-Django org.
author_email = nikita.marchant@gmail.com
license = MIT
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 3.1
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires = 
	django

[options.package_data]
turbo = 
	templates/turbo/*.html
	static/turbo/js/*.js

[flake8]
max-line-length = 200
